<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">justjava</string>
    <string name="name">Name</string>
    <string name="chocolate">Chocolate</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="order">order</string>
    <string name="thanks">thank you </string>
    <string name="price">price</string>
    <string name="whippedCream">whippedCream</string>
    <string name="JustJava_order_for">JustJava order for</string>
    <string name="yes">yes</string>
    <string name="no">no</string>






</resources>